# gym-cn-chess

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
gym_cn_chess/: __init__.py
gym_cn_chess/envs/: __init__.py  cn_chess_env.py  cn_chess_logic.py  cn_chess_pygame.py  cn_chess_value.py
tests/: test_env.py
tests/envs/: test_cn_chess_env.py
